--- a/App/Resources/LaunchScreen.storyboard
+++ b/App/Resources/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="hAu-IN-6Qv">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_circle" translatesAutoresizingMaskIntoConstraints="NO" id="hAu-IN-6Qv">
                                 <rect key="frame" x="116.66666666666669" y="358.66666666666669" width="160" height="160.00000000000006"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="160" id="5Du-H8-Wsj"/>
@@ -24,7 +25,7 @@
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" name="GrayscaleWhite"/>
                         <constraints>
                             <constraint firstItem="hAu-IN-6Qv" firstAttribute="centerY" secondItem="Bcu-3y-fUS" secondAttribute="centerY" id="XH6-2d-Xds"/>
                             <constraint firstItem="hAu-IN-6Qv" firstAttribute="centerX" secondItem="Bcu-3y-fUS" secondAttribute="centerX" id="nVK-rX-mlK"/>
@@ -37,6 +38,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Logo" width="160" height="160"/>
+        <image name="logo_circle" width="160" height="160"/>
+        <namedColor name="GrayscaleWhite">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
